# img-block-match-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/: benchmark.rs  generate_sample.rs  regression_check.rs
scripts/: build-wasm.sh  test-wasm.mjs
src/: block_match.rs  lib.rs  pyramid.rs  render.rs  wasm_api.rs
