[package]
name = "img-block-match"
version = "0.1.0"
edition = "2021"
description = "2D block-matching image diff that tolerates content shifts in both X and Y axes."
license = "MIT"
repository = "https://github.com/bokuweb/img-block-match-rs"
readme = "README.md"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "img-block-match"
path = "src/bin/img-block-match.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"
codegen-units = 1
